# reminder

./: .gitignore  README.md  pyproject.toml
configs/log/: logging.toml
configs/settings/: settings-template.toml
docs/db/: database_design.dbml
kernel/: urls.py
kernel/settings/: __init__.py  base.py  development.py  production.py
kernel/settings/services/: __init__.py  auth.py  backend.py  database.py  localization.py  log_conf.py
media/templates/pages/: todo_list.html
painless/: apps.py
painless/models/generator/: base.py
painless/models/mixins/: __init__.py  banner.py  common.py  icon.py  logo.py  picture.py  timestamp.py
painless/validators/: __init__.py  picture.py
todo_list/: apps.py  urls.py
todo_list/admin/: __init__.py  todo.py
todo_list/forms/: __init__.py  todo.py
todo_list/helper/: __init__.py  choices.py
todo_list/models/: todo.py
todo_list/views/: __init__.py  todo.py
