[tool.poetry]
name = "Reminder"
version = "0.1.0"
description = "Reminder of the list of things to do"
authors = ["beehdaad <behdad.siavoshi1375@gmail.com>"]
license = "Free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
psycopg2 = "^2.9.6"
reportlab = "^4.0.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
